# eurospark

./: .gitignore  CLAUDE.md  Dockerfile  README.md  langgraph.json  pyproject.toml  server.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data/: energy_consumption_clean.csv  renewable_capacity_clean.csv
docs/: graph_architecture.md
etl/common/: eurostat_client.py  loader.py  test_data_ingestion.ipynb  transformer.py
etl/pipelines/: electricity_mix.py  electricity_prices.py  energy_balance.py  energy_intensity.py  gas_prices.py  import_dependency.py  renewable_generation.py  renewable_share.py
frontend/: app.py
notebooks/: new_graph.ipynb
sql/: schema.sql
src/eurospark/: config.py
src/eurospark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/eurospark/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
src/eurospark/agent/prompts/: SQL_agent_prompt.md  __init__.py  chart_agent_prompt.md  clarification_agent_prompt.md  loader.py  responder_prompt.md  supervisor_prompt.md
src/eurospark/db/: schema.sql  seed.py
