[project]
name = "eurospark"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "streamlit",
    "uvicorn",
    "langgraph>=0.2",
    "langgraph-cli",
    "langgraph-api",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "supabase>=2.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "pydantic-settings>=2.0",
    "langsmith>=0.1",
    "psycopg[binary]>=3.0",      # for PostgresSaver on Render
    "langgraph-checkpoint-postgres>=2.0",
    "kaleido>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
frontend = ["streamlit>=1.35"]
